feat: add model order and order service

--- a/src/Application/OrderService.Application.Contracts/OrderService.Application.Contracts.csproj
+++ b/src/Application/OrderService.Application.Contracts/OrderService.Application.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\OrderService.Application.Models\OrderService.Application.Models.csproj" />
+    </ItemGroup>
+
 </Project>
