--- a/src/Application/OrderService.Application/OrderService.Application.csproj
+++ b/src/Application/OrderService.Application/OrderService.Application.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OrderService.Application.Domain\OrderService.Application.Domain.csproj" />
+      <ProjectReference Include="..\OrderService.Application.Contracts\OrderService.Application.Contracts.csproj" />
+      <ProjectReference Include="..\OrderService.Application.Models\OrderService.Application.Models.csproj" />
     </ItemGroup>
 
 </Project>
