--- a/src/Application/OrderService.Application/OrderService.Application.csproj
+++ b/src/Application/OrderService.Application/OrderService.Application.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\OrderService.Application.Models\OrderService.Application.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+    </ItemGroup>
+
 </Project>
