--- a/src/Infrastructure/OrderService.Infrastructure.Persistence/OrderService.Infrastructure.Persistence.csproj
+++ b/src/Infrastructure/OrderService.Infrastructure.Persistence/OrderService.Infrastructure.Persistence.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\OrderService.Application.Abstractions\OrderService.Application.Abstractions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+    </ItemGroup>
+
 </Project>
