--- a/src/OrderService/OrderService/OrderService.csproj
+++ b/src/OrderService/OrderService/OrderService.csproj
@@ -12,4 +12,13 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\OrderService.Application\OrderService.Application.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\OrderService.Infrastructure.Persistence\OrderService.Infrastructure.Persistence.csproj" />
+    </ItemGroup>
+
 </Project>
