--- a/src/Presentation/OrderService.Presentation.Controllers/OrderService.Presentation.Controllers.csproj
+++ b/src/Presentation/OrderService.Presentation.Controllers/OrderService.Presentation.Controllers.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\OrderService.Application.Contracts\OrderService.Application.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
