--- a/src/OrderService/Application/OrderService.Application/OrderService.Application.csproj
+++ b/src/OrderService/Application/OrderService.Application/OrderService.Application.csproj
@@ -5,13 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\Application\OrderService.Application.Abstractions\OrderService.Application.Abstractions.csproj" />
-    </ItemGroup>
-
+    
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\OrderService.Application.Contracts\OrderService.Application.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
